src/app/components/about/about.component.scss
@import '../../../styles.scss';

main {
  background-color: $dark-purple;
  height: 700px;
  margin-top: 100px;
}

.row {
  display: flex;
  border: 1px;
  justify-content: center;
}

.leftcolumn {
  margin-top: 40px;
  float: left;
  width: 40%;
  padding-left: 25%;
  padding-right: 20px;
  padding-top: 1%;
}

.leftlist {
  float: left;
  width: 30%;
}

.rightcolumn {
  display: block;
  margin-top: 40px;
  float: left;
  width: 70%;
  padding-right: 25%;
}

.rightlist {
  float: left;
  width: 50%;
  padding-left: -20%;
}

.tech-examples {
  color: #f2f2f2;
  font-family: "lato", sans-serif;
  font-weight: 100;
  opacity: .6;
  font-size: 20px;
}

ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

li::before {
  color: $tiffany-blue;
  content: "►";
  //content: "▷";
  padding-inline: 1ch;
  margin-inline-end: 1px;
  opacity: 1.4;
}

li {
  padding-left: 16px;
  border-color: transparent;
  border-style: solid;
  border-width: 20px 20px;
  display: block;
  font-size: 16px;
  height: 0;
  width: 0;
  left: -1em;
  font-family: 'Courier New', monospace;
}

.header-txt {
  background: none;
  color: $white;
  font-family: "lato", sans-serif;
  font-size: 50px;
  letter-spacing: 10px;
  font-weight: 300;
  opacity: .8;
}

.header-txt span {
  color: $tiffany-blue;
  padding-right: 3px;
}

.about {
  color: $white;
  font-size: 20px;
  font-family: "lato", sans-serif;
  font-weight: 100;
  opacity: .6;
}

img {
  max-width: 100%;
}

